--- a/07-trabajos.Rmd
+++ b/07-trabajos.Rmd
@@ -35,7 +35,7 @@ klippy::klippy(position = c("top", "right")) #- remotes::install_github("rlesur/
 
 <br>
 
-- **Jesús Lloret Quero**, **Vicent Mompo Crespo** y **Francisco Martínez Caballero** presentaron el trabajo [Causas y consecuencias de la inflación sobre el crecimiento económico en el contexto mundial](https://fran2200.github.io/trabajo_BigData_equipo/){target="_blank"}. El repo del trabajo está [aquí](https://github.com/fran2200/trabajo_BigData_equipo){target="_blank"}.  Las `slides` para la presentación están [aquí](https://fran2200.github.io/trabajo_BigData_slides/){target="_blank"}.
+- **Jesús Lloret Quero**, **Vicent Mompo Crespo** y **Francisco Martínez Caballero** presentaron el trabajo [Inflación en tiempos de pandemia](https://fran2200.github.io/trabajo_BigData_equipo/){target="_blank"}. El repo del trabajo está [aquí](https://github.com/fran2200/trabajo_BigData_equipo){target="_blank"}.  Las `slides` para la presentación están [aquí](https://fran2200.github.io/trabajo_BigData_slides/){target="_blank"}.
 
 <br> 
 
