--- a/07-trabajos.Rmd
+++ b/07-trabajos.Rmd
@@ -87,7 +87,7 @@ klippy::klippy(position = c("top", "right")) #- remotes::install_github("rlesur/
 <br> 
 
 
-- **Alba Estela**, **Melanie Neufcour** y **Mireia Yangüez** presentaron el trabajo [TT Youtube en los distintos países en los últimos años](https://meneuf.github.io/trabajo_BigData_equipo/){target="_blank"}. El repo del trabajo está [aquí](https://github.com/meneuf/trabajo_BigData_equipo){target="_blank"}.  Las `slides` para la presentación están [aquí](https://meneuf.github.io/trabajo_BigData_slides/){target="_blank"}.
+- **Alba Estela**, **Melanie Neufcour** y **Mireia Yangüez** presentaron el trabajo [FAST FOOD. Análisis del restaurante McDonald’s](https://meneuf.github.io/trabajo_BigData_equipo/){target="_blank"}. El repo del trabajo está [aquí](https://github.com/meneuf/trabajo_BigData_equipo){target="_blank"}.  Las `slides` para la presentación están [aquí](https://meneuf.github.io/trabajo_BigData_slides/){target="_blank"}.
 
 <br> 
 
